tests/lean/notation5.lean
import data.num

notation `((` := 1

precedence `(` : 30

notation `))` := 1

notation `,,` := 1

precedence `,` : 10
